2017-04-07  Chris Dumez  <cdumez@apple.com>

        Unreviewed, update 2 media tests after r215120 so they work on iOS.

        Setting the volume is a no-op on iOS so mute the video instead.

        * media/video-restricted-invisible-autoplay-allowed-when-visible.html:
        * media/video-restricted-invisible-autoplay-not-allowed.html:

2017-04-07  Yuichiro Kikura  <y.kikura@gmail.com>

        WebGPU: implement ComputeCommandEncoder and related components    
        https://bugs.webkit.org/show_bug.cgi?id=170444

        Reviewed by Alex Christensen.

        Added a test case to ensure ComputeCommandEncoder is dispatched successfully

        * fast/canvas/webgpu/webgpu-dispatch-expected.txt: Added.
        * fast/canvas/webgpu/webgpu-dispatch.html: Added.

2017-04-07  Zalan Bujtas  <zalan@apple.com>

        Simple line layout: FlowContents::segmentIndexForRunSlow skips empty runs.
        https://bugs.webkit.org/show_bug.cgi?id=170552

        Reviewed by Antti Koivisto.

        * fast/text/simple-line-layout-hover-over-subsequent-linebreaks-expected.txt: Added.
        * fast/text/simple-line-layout-hover-over-subsequent-linebreaks.html: Added.

2017-04-07  Ryan Haddad  <ryanhaddad@apple.com>

        Mark media/modern-media-controls/media-controller/media-controller-auto-hide-mouse-leave-after-play.html as flaky.
        https://bugs.webkit.org/show_bug.cgi?id=168540

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2017-04-07  Ryan Haddad  <ryanhaddad@apple.com>

        Mark inspector/codemirror/prettyprinting-css.html as a flaky timeout.
        https://bugs.webkit.org/show_bug.cgi?id=170615

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2017-04-07  Chris Dumez  <cdumez@apple.com>

        Audible autoplay videos should not get paused when outside the viewport
        https://bugs.webkit.org/show_bug.cgi?id=170610
        <rdar://problem/31505984>

        Reviewed by Eric Carlson.
